feat(learning): count a language's weeks from its first session
A learner three weeks old was reading 2/12 — ten unmet weeks it never had.
The rhythm now reports the first day each language was ever learned in, so
the denominator starts there and grows: 2/3, then 2/4, reaching 2/12 and
rolling from there. A language never learned in reports no first session at
all, and is graded on nothing.

Twelve stays the number every surface talks about; fourteen remains an API
artifact the client slices, so the contract is unchanged.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YSyPjonw3xAcbnjt7QSp1U